tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_7.py
# Attempt to give data ownership to a pointer
# pylint: disable=missing-module-docstring

a = [2,5]
b = a
b = [1,2,3]
